--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5939,6 +5939,18 @@
   timestamp = {2019.03.29},
 }
 
+@Article{BronwenThomas2011,
+  author    = {Thomas, B.},
+  title     = {What Is Fanfiction and Why Are People Saying Such Nice Things about It??},
+  journal   = {Storyworlds},
+  year      = {2011},
+  volume    = {3},
+  pages     = {1-24},
+  doi       = {10.5250/storyworlds.3.2011.0001},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+}
+
 @Book{Brooke1816,
   title     = {Reliques of Irish Poetry: Consisting of Heroic Poems, Odes, Elegies, and Songs, Translated Into English Verse, With Notes Explanatory and Historical, and the Originals in the Irish Character, to which is Subjoined an Irish Tale},
   publisher = {J. Christie},
@@ -6170,7 +6182,7 @@
 
 @InProceedings{Buechler2018,
   author    = {Büchler, M. and Franzini, G. and Kestemont, M. and Manjavacas, E.},
-  title     = {The recreation of harry potter: Tracing style and content across novels, movie scripts and fanfiction},
+  title     = {The recreation of {Harry Potter}: Tracing style and content across novels, movie scripts and fanfiction},
   booktitle = {Digital Humanities},
   year      = {2018},
   owner     = {Vincent},
@@ -7215,6 +7227,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2020.03.15},
   url       = {https://www.aclweb.org/anthology/W16-4011/},
+}
+
+@Article{CatherineTosenberger2008,
+  author    = {Tosenberger, C.},
+  title     = {Homosexuality at the Online Hogwarts: Harry Potter Slash Fanfiction},
+  journal   = {Children's Literature},
+  year      = {2008},
+  volume    = {36},
+  number    = {1},
+  pages     = {185-207},
+  doi       = {10.1353/chl.0.0017},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
 }
 
 @Article{Cattrysse1992,
@@ -11678,6 +11703,31 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2021.09.18},
   url       = {https://www.honorechampion.com/fr/champion/7046-book-08531802-9782745318022.html},
+}
+
+@Article{Duggan2017,
+  author    = {Duggan, J.},
+  title     = {Revising Hegemonic Masculinity: Homosexuality, Masculinity, and Youth-Authored Harry Potter Fanfiction},
+  journal   = {Bookbird},
+  year      = {2017},
+  volume    = {55},
+  number    = {2},
+  pages     = {38-45},
+  doi       = {10.1353/bkb.2017.0022},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+}
+
+@Article{Duggan2020,
+  author    = {Duggan, J.},
+  title     = {Who writes Harry Potter fan fiction? Passionate detachment, ``zooming out,'' and fan fiction paratexts on {AO3}},
+  journal   = {Transformative Works and Cultures},
+  year      = {2020},
+  volume    = {34},
+  pages     = {4},
+  doi       = {10.3983/twc.2020.1863},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
 }
 
 @Article{Dugue2015a,
@@ -16548,6 +16598,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp    = {2016.02.23},
 }
 
+@Article{Grandjean2016,
+  author    = {Grandjean, M.},
+  title     = {A social network analysis of Twitter: Mapping the digital humanities community},
+  journal   = {Cogent Arts \& Humanities},
+  year      = {2016},
+  volume    = {3},
+  number    = {1},
+  pages     = {1171458},
+  doi       = {10.1080/23311983.2016.1171458},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+}
+
 @Article{Granovetter1973,
   author    = {Granovetter, M.},
   title     = {The Strength of Weak Ties},
@@ -18479,6 +18542,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1111/j.1559-1816.1993.tb01008.x},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Book{Hellekson2006,
+  title     = {Fan Fiction and Fan Communities in the Age of the Internet: New Essays},
+  publisher = {McFarland},
+  year      = {2006},
+  author    = {Hellekson, K. and Busse, K.},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {https://books.google.fr/books/?id=UgZsi_DOKoQC},
 }
 
 @Article{Heller2005,
@@ -20656,6 +20729,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.09.22},
   url       = {https://muse.jhu.edu/article/447304},
+}
+
+@Book{Jamison2013,
+  title     = {Fic: Why Fanfiction Is Taking Over the World},
+  publisher = {Smart Pop},
+  year      = {2013},
+  author    = {Jamison, A. and Grossman, L.},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {https://www.wattpad.com/story/13132615-fic-why-fanfiction-is-taking-over-the-world},
 }
 
 @InProceedings{Jancarik2015,
@@ -22878,6 +22961,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/324133.324140},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@InProceedings{Kleindienst2020,
+  author    = {Kleindienst, N. and Schmidt, T.},
+  title     = {Investigating the Transformation of Original Work by the Online Fan Fiction Community: A Case Study for Supernatural},
+  booktitle = {Digital Practices. Reading, Writing and Evaluation on the Web},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {https://epub.uni-regensburg.de/50828/},
 }
 
 @Article{Klemm2002,
@@ -26859,6 +26952,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.19},
 }
 
+@InProceedings{Liu2019c,
+  author    = {Liu, C. and Osama, M. and De Andrade, A.},
+  title     = {{DENS}: A Dataset for Multi-class Emotion Analysis},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  pages     = {6293-6298},
+  doi       = {10.18653/v1/d19-1656},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+}
+
 @Article{Liu2020,
   author    = {Liu, W. and Zhou, P. and Zhao, Z. and Wang, Z. and Ju, Q. and Deng, H. and Wang, P.},
   title     = {K-BERT: Enabling Language Representation with Knowledge Graph},
@@ -28511,6 +28615,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.12},
   url       = {https://www.cornellpress.cornell.edu/book/9780801417719/recent-theories-of-narrative/#bookTabs=1},
+}
+
+@InProceedings{Martin2011,
+  author    = {Martin, S. and Brown, W. M. and Klavans, R. and Boyack, K. W.},
+  title     = {{OpenOrd}: an open-source toolbox for large graph layout},
+  booktitle = {IS\&T/SPIE Electronic Imaging},
+  year      = {2011},
+  volume    = {7868},
+  series    = {SPIE Proceedings},
+  pages     = {786806},
+  publisher = {SPIE},
+  doi       = {10.1117/12.871402},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
 }
 
 @Article{Martin2014,
@@ -30938,6 +31056,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.12.06},
 }
 
+@InProceedings{Mossburger2020,
+  author    = {Mossburger, L. and Wende, F. and Brinkmann, K. and Schmidt, T.},
+  title     = {Exploring Online Depression Forums via Text Mining: A Comparison of Reddit and a Curated Online Forum},
+  booktitle = {5th Social Media Mining for Health Applications Workshop \& Shared Task},
+  year      = {2020},
+  pages     = {70-81},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {https://aclanthology.org/2020.smm4h-1.11/},
+}
+
 @Book{Mostellar1984,
   title     = {Applied Bayesian and Classical Inference: The Case of The Federalist Papers},
   publisher = {Springer},
@@ -31323,6 +31452,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-30671-1_60},
   owner     = {Vincent},
   timestamp = {2021.07.02},
+}
+
+@InProceedings{Muttenthaler2019,
+  author    = {Muttenthaler, L. and Lucas, G. and Amann, J.},
+  title     = {Authorship attribution in fan-fictional texts given variable length character and word n-grams},
+  booktitle = {Conference and Labs of the Evaluation Forum},
+  year      = {2019},
+  volume    = {2380},
+  series    = {CEUR Workshop Proceedings},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {http://ceur-ws.org/Vol-2380/paper_49.pdf},
 }
 
 @InProceedings{Mutton2002,
@@ -34541,6 +34682,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1371/journal.pone.0226708},
   owner     = {Vincent},
   timestamp = {2022.03.25},
+}
+
+@InProceedings{Pianzola2020a,
+  author    = {Pianzola, F. and Acerbi, A. and Rebora, S.},
+  title     = {Cultural accumulation and improvement in online fan fiction},
+  booktitle = {Computational Humanities Research},
+  year      = {2020},
+  volume    = {2723},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {8},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {http://ceur-ws.org/Vol-2723/short8.pdf},
+}
+
+@Article{Pianzola2020b,
+  author    = {Pianzola, F. and Rebora, S. and Lauer, G.},
+  title     = {Wattpad as a resource for literary studies. Quantitative and qualitative examples of the importance of digital social reading and readers' comments in the margins},
+  journal   = {PLoS ONE},
+  year      = {2020},
+  volume    = {15},
+  number    = {1},
+  pages     = {e0226708},
+  doi       = {10.1371/journal.pone.0226708},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
 }
 
 @Book{Pierce1878,
@@ -38812,6 +38979,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.12.28},
 }
 
+@InProceedings{Schmidt2019b,
+  author    = {Schmidt, T. and Burghardt, M. and Wolff, C.},
+  title     = {Toward Multimodal Sentiment Analysis of Historic Plays: A Case Study with Text and Audio for Lessing's Emilia Galotti},
+  booktitle = {4th Conference of Digital Humanities in the Nordic Countries},
+  year      = {2019},
+  volume    = {2364},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {405-414},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {http://ceur-ws.org/Vol-2364/37_paper.pdf},
+}
+
 @InProceedings{Schmidt2020,
   author    = {Schmidt, T. and Engl, I. and Halbhuber, D. and Wolff, C.},
   title     = {Comparing live sentiment annotation of movies via arduino and a slider with textual annotation of subtitles},
@@ -38821,6 +39001,27 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.12.28},
   url       = {http://ceur-ws.org/Vol-2865/poster1.pdf},
+}
+
+@InProceedings{Schmidt2020a,
+  author    = {Schmidt, T. and Hartl, P. and Ramsauer, D. and Fischer, T. and Hilzenthaler, A. and Wolff, C.},
+  title     = {Acquisition and analysis of a meme corpus to investigate web culture},
+  booktitle = {15th Annual International Conference of the Alliance of Digital Humanities Organizations},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {https://dh2020.adho.org/wp-content/uploads/2020/07/590_AcquisitionandAnalysisofaMemeCorpustoInvestigateWebCulture.html},
+}
+
+@InProceedings{Schmidt2020b,
+  author    = {Schmidt, T. and Kaindl, F. and Wolff, C.},
+  title     = {Distant reading of religious online communities: A case study for three religious forums on {Reddit}},
+  booktitle = {5th Conference on Digital Humanities in the Nordic Countries},
+  year      = {2020},
+  pages     = {157-172},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {http://ceur-ws.org/Vol-2612/paper11.pdf},
 }
 
 @InProceedings{Schmidt2021,
@@ -38856,6 +39057,59 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4230/OASIcs.LDK.2021.9},
   owner     = {Vincent},
   timestamp = {2021.12.28},
+}
+
+@InCollection{Schmidt2021c,
+  author    = {Schmidt, T. and Dennerlein, K. and Wolff, C.},
+  title     = {Using Deep Learning for Emotion Analysis of 18th and 19th Century German Plays},
+  booktitle = {Fabrikation von Erkenntnis. Experimente in den Digital Humanities},
+  publisher = {Melusina Press},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {https://epub.uni-regensburg.de/50827/1/vDhd-Beitrag-Schmidt-UsingDeepLearning.pdf},
+}
+
+@InProceedings{Schmidt2021d,
+  author    = {Schmidt, T. and El-Keilany, A. and Eger, J. and Kurek, S.},
+  title     = {Exploring Computer Vision for Film Analysis: A Case Study for Five Canonical Movies},
+  booktitle = {2nd International Conference of the European Association for Digital Humanities},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {https://epub.uni-regensburg.de/50867/},
+}
+
+@InProceedings{Schmidt2021e,
+  author    = {Schmidt, T. and Wolff, C.},
+  title     = {Exploring Multimodal Sentiment Analysis in Plays: A Case Study for a Theater Recording of Emilia Galotti},
+  booktitle = {Conference on Computational Humanities Research},
+  year      = {2021},
+  pages     = {392-404},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {http://ceur-ws.org/Vol-2989/short_paper45.pdf},
+}
+
+@InProceedings{Schmidt2021f,
+  author    = {Schmidt, T. and Dennerlein, K. and Wolff, C.},
+  title     = {Emotion Classification in German Plays with Transformer-based Language Models Pretrained on Historical and Contemporary Language},
+  booktitle = {5th Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  year      = {2021},
+  pages     = {67-79},
+  doi       = {10.18653/v1/2021.latechclfl-1.8},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+}
+
+@InProceedings{Schmidt2021g,
+  author    = {Schmidt, T. and Grünler, J. and Schönwerth, N. and Wolff , C.},
+  title     = {Towards the Analysis of Fan Fictions in German Language: Exploration of a Corpus from the Platform Archive of Our Own},
+  booktitle = {2nd International Conference of the European Association for Digital Humanities},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+  url       = {https://epub.uni-regensburg.de/50829/1/Schmidt_EADH2021_FanFictions.pdf},
 }
 
 @InProceedings{Schmidt2022,
@@ -44408,6 +44662,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/Abraham_in_History_and_Tradition.html?id=F3fboAEACAAJ},
 }
 
+@Article{VanSteenhuyse2011,
+  author    = {Van Steenhuyse, V.},
+  title     = {The Writing and Reading of Fan Fiction and Transformation Theory},
+  journal   = {{CLCWeb}: Comparative Literature and Culture},
+  year      = {2011},
+  volume    = {13},
+  number    = {4},
+  pages     = {4},
+  doi       = {10.7771/1481-4374.1691},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+}
+
 @InProceedings{vanWillegen2009,
   author    = {van Willegen, I. and Rothkrantz, L. and Wiggers, P.},
   title     = {Lexical Affinity Measure between Words},
@@ -44642,6 +44909,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/1072399.1072405},
   owner     = {Vincent},
   timestamp = {2022.06.19},
+}
+
+@InProceedings{Vilares2019,
+  author    = {Vilares, D. and Gómez-Rodríguez, C.},
+  title     = {Harry Potter and the Action Prediction Challenge from Natural Language},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2019},
+  pages     = {2124-2130},
+  doi       = {10.18653/v1/n19-1218},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
 }
 
 @InProceedings{Vilenchik2022,
@@ -47722,6 +48000,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.22},
 }
 
+@InProceedings{Yin2017,
+  author    = {Yin, K. and Aragon, C. and Evans, S. and Davis, K.},
+  title     = {Where No One Has Gone Before: A Meta-Dataset of the World's Largest Fanfiction Repository},
+  booktitle = {Conference on Human Factors in Computing Systems},
+  year      = {2017},
+  pages     = {6106-6110},
+  doi       = {10.1145/3025453.3025720},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
+}
+
 @Article{Yook2010,
   author    = {Yook, S.-H. and Yun, Y.-K. and Kim, Y.},
   title     = {Biased random walk sampling on assortative networks},
@@ -48436,6 +48725,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icis.2018.8466543},
   owner     = {Vincent},
   timestamp = {2021.03.27},
+}
+
+@Article{Zhang2019,
+  author    = {Zhang, W. and Cheung, J. C. K. and Oren, J.},
+  title     = {Generating Character Descriptions for Automatic Summarization of Fiction},
+  journal   = {AAAI Conference on Artificial Intelligence},
+  year      = {2019},
+  volume    = {33},
+  pages     = {7476-7483},
+  doi       = {10.1609/aaai.v33i01.33017476},
+  owner     = {Vincent},
+  timestamp = {2022.07.02},
 }
 
 @InProceedings{Zhang2019aa,
