--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -11221,6 +11221,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https ://human it.hb.se/artic le/view/594},
 }
 
+@Book{Domsch2013,
+  title     = {Storyplaying: Agency and Narrative in Video Games},
+  publisher = {De Gruyter},
+  year      = {2013},
+  author    = {Domsch, S.},
+  doi       = {10.1515/9783110272451},
+  owner     = {Vincent},
+  timestamp = {2022.07.03},
+}
+
 @InProceedings{Don2007,
   author    = {Don, A. and Zheleva, E. and Gregory, M. and Tarkan, S. and Auvil, L. and Clement, T. and Shneiderman, B. and Plaisant, C.},
   title     = {Discovering interesting usage patterns in text collections: integrating text mining with visualization},
@@ -36796,6 +36806,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@Article{Riedl2012,
+  author    = {Riedl, M. O. and Bulitko, V.},
+  title     = {Interactive Narrative: An Intelligent Systems Approach},
+  journal   = {AI Magazine},
+  year      = {2012},
+  volume    = {34},
+  number    = {1},
+  pages     = {67},
+  doi       = {10.1609/aimag.v34i1.2449},
+  owner     = {Vincent},
+  timestamp = {2022.07.03},
+}
+
 @InProceedings{Rienks2006,
   author    = {Rienks, R. and Zhang, D. and Gatica-Perez, D. and Post, W.},
   title     = {Detection and application of influence rankings in small group meetings},
@@ -38046,6 +38069,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1515/sem.2007.030},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Article{Ryan2009,
+  author    = {Ryan, M.-L.},
+  title     = {From Narrative Games to Playable Stories: Toward a Poetics of Interactive Narrative},
+  journal   = {StoryWorlds},
+  year      = {2009},
+  volume    = {1},
+  pages     = {43-59},
+  owner     = {Vincent},
+  timestamp = {2022.07.03},
+  url       = {https://www.jstor.org/stable/25663007},
 }
 
 @InCollection{Ryan2014,
