--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1427,6 +1427,21 @@
   timestamp = {2016.08.25},
 }
 
+@Article{Ammanabrolu2020,
+  author    = {Ammanabrolu, P. and Tien, E. and Cheung, W. and Luo, Z. and Ma, W. and Martin, L. J. and Riedl, M. O.},
+  title     = {Story Realization: Expanding Plot Events into Sentences},
+  journal   = {AAAI Conference on Artificial Intelligence},
+  year      = {2020},
+  volume    = {34},
+  number    = {05},
+  pages     = {7375-7382},
+  doi       = {10.1609/aaai.v34i05.6232},
+  groups    = {Plot Generation (NLP)},
+  owner     = {Vincent},
+  review    = {arXiv: https://arxiv.org/abs/1909.03480},
+  timestamp = {2022.07.19},
+}
+
 @InProceedings{Anand2011,
   author    = {Anand, P. and Walker, M. and Abbott, R. and Fox Tree, J. E. and Bowmani, R. and Minor, M.},
   title     = {Cats rule and dogs drool!: classifying stance in online debate},
@@ -17752,6 +17767,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.06.29},
 }
 
+@InProceedings{Gruber2007,
+  author    = {Gruber, A. and Weiss, Y. and Rosen-Zvi, M.},
+  title     = {Hidden Topic Markov Models},
+  booktitle = {11th International Conference on Artificial Intelligence and Statistics},
+  year      = {2007},
+  volume    = {2},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {163-170},
+  owner     = {Vincent},
+  timestamp = {2022.07.28},
+  url       = {https://proceedings.mlr.press/v2/gruber07a.html},
+}
+
 @InProceedings{Gruhl2004,
   author    = {Gruhl, D. and Guha, R. and Liben-Nowell, D. and Tomkins, A.},
   title     = {Information diffusion through blogspace},
@@ -21718,6 +21746,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.upress.umn.edu/book-division/books/toward-an-aesthetic-of-reception},
 }
 
+@InProceedings{Jayakumar2022,
+  author    = {Jayakumar, A. and Rao, V. and Rohit Kumar, A. S. and Banerjee, P. and Ravish, R.},
+  title     = {Analyzing the development of complex social systems of characters in a work of literary fiction},
+  booktitle = {3rd International Conference for Emerging Technology},
+  year      = {2022},
+  pages     = {1-7},
+  doi       = {10.1109/incet54531.2022.9824015},
+  owner     = {Vincent},
+  timestamp = {2022.07.19},
+}
+
 @InProceedings{Jayannavar2015,
   author    = {Jayannavar, P. A. and Agarwal, A. and Ju, M. and Rambo, O.},
   title     = {Validating literary theories using automatic social network extraction},
@@ -23516,6 +23555,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.03.13},
   url       = {https://www.researchgate.net/publication/312153622_Application_of_Random_Forests_to_Corporate_Credit_Rating_Prediction},
+}
+
+@Book{Kim2016a,
+  title     = {Understanding Narrative Inquiry: The Crafting and Analysis of Stories as Research},
+  publisher = {SAGE Publications},
+  year      = {2016},
+  author    = {Kim, J.-H.},
+  doi       = {10.4135/9781071802861},
+  owner     = {Vincent},
+  timestamp = {2022.07.28},
 }
 
 @InProceedings{Kim2017,
@@ -27867,6 +27916,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/9781118783764.wbieme0092},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@Article{Liu2018,
+  author    = {Liu, M. and Wu, Y. and Jiao, D. and Wu, M. S. and Zhu, T.},
+  title     = {Literary intelligence analysis of novel protagonists' personality traits and development},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2018},
+  volume    = {34},
+  number    = {1},
+  pages     = {221-229},
+  month     = {jul},
+  doi       = {10.1093/llc/fqy020},
+  owner     = {Vincent},
+  timestamp = {2022.07.28},
 }
 
 @Article{Liu2019,
