--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1427,6 +1427,21 @@
   timestamp = {2016.08.25},
 }
 
+@Article{Ammanabrolu2020,
+  author    = {Ammanabrolu, P. and Tien, E. and Cheung, W. and Luo, Z. and Ma, W. and Martin, L. J. and Riedl, M. O.},
+  title     = {Story Realization: Expanding Plot Events into Sentences},
+  journal   = {AAAI Conference on Artificial Intelligence},
+  year      = {2020},
+  volume    = {34},
+  number    = {05},
+  pages     = {7375-7382},
+  doi       = {10.1609/aaai.v34i05.6232},
+  groups    = {Plot Generation (NLP)},
+  owner     = {Vincent},
+  review    = {arXiv: https://arxiv.org/abs/1909.03480},
+  timestamp = {2022.07.19},
+}
+
 @InProceedings{Anand2011,
   author    = {Anand, P. and Walker, M. and Abbott, R. and Fox Tree, J. E. and Bowmani, R. and Minor, M.},
   title     = {Cats rule and dogs drool!: classifying stance in online debate},
@@ -1436,6 +1451,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://dl.acm.org/citation.cfm?id=2107654},
+}
+
+@Book{Anderson1976,
+  title     = {Language, Memory, and Thought},
+  publisher = {Psychology Press},
+  year      = {1976},
+  author    = {Anderson, J. R.},
+  doi       = {10.4324/9780203780954},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @PhdThesis{Anderson1999,
@@ -3860,6 +3885,16 @@
   owner     = {Vincent},
   timestamp = {2020.07.22},
   url       = {https://www.aclweb.org/anthology/D12-1091/},
+}
+
+@Book{Bergson1901,
+  title     = {The world of dreams},
+  publisher = {Philosophical Library},
+  year      = {1901},
+  author    = {Bergson, H.},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+  url       = {https://books.google.fr/books/?id=OXeMBAAAQBAJ},
 }
 
 @Article{Berhe2019,
@@ -6932,6 +6967,31 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.aaai.org/ocs/index.php/FLAIRS/FLAIRS13/paper/view/5862},
 }
 
+@Article{Calkins1893,
+  author    = {Calkins, M. W.},
+  title     = {Statistics of dreams},
+  journal   = {American Journal of Psychology},
+  year      = {1893},
+  volume    = {5},
+  number    = {3},
+  pages     = {311-343},
+  doi       = {10.2307/1410996},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
+@InCollection{Calkins1961,
+  author    = {Calkins, M. W.},
+  title     = {Mary Whiton Calkins},
+  booktitle = {A history of psychology in autobiography},
+  publisher = {Russel \& Russel.},
+  year      = {1961},
+  pages     = {31-62},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+  url       = {https://www.apa.org/pubs/books/4316091},
+}
+
 @Book{Callaghan2003,
   title     = {William Shakespeare: Romeo and Juliet: Texts and Contexts},
   publisher = {Bedford/St. Martin's},
@@ -9852,6 +9912,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://www.dlib.org/dlib/march06/crane/03crane.html},
 }
 
+@Article{Crick1983,
+  author    = {Crick, F. and Mitchison, G.},
+  title     = {The function of dream sleep},
+  journal   = {Nature},
+  year      = {1983},
+  volume    = {304},
+  number    = {5922},
+  pages     = {111-114},
+  doi       = {10.1038/304111a0},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @Article{Cristelli2012,
   author    = {Cristelli, M. and Batty, M. and Pietronero, L.},
   title     = {There is More than a Power Law in Zipf},
@@ -10670,6 +10743,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1002/(sici)1097-4571(199009)41:6<391::aid-asi1>3.0.co;2-9},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Deese_1959,
+  author    = {Deese, J.},
+  title     = {On the prediction of occurrence of particular verbal intrusions in immediate recall},
+  journal   = {Journal of Experimental Psychology},
+  year      = {1959},
+  volume    = {58},
+  number    = {1},
+  pages     = {17-22},
+  doi       = {10.1037/h0046671},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @PhdThesis{DeFazio2012,
@@ -16668,6 +16754,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.09.19},
 }
 
+@Article{Goff_1998,
+  author    = {Goff, L. M. and Roediger, H. L.},
+  title     = {Imagination inflation for action events: Repeated imaginings lead to illusory recollections},
+  journal   = {Memory \& Cognition},
+  year      = {1998},
+  volume    = {26},
+  pages     = {20-33},
+  doi       = {10.3758/bf03211367},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @InProceedings{Goh2012,
   author    = {Goh, H.-N. and Soon, L.-K. and Haw, S.-C.},
   title     = {Automatic identification of protagonist in fairy tales using verb},
@@ -17750,6 +17848,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/2939672.2939754},
   owner     = {Vincent},
   timestamp = {2019.06.29},
+}
+
+@InProceedings{Gruber2007,
+  author    = {Gruber, A. and Weiss, Y. and Rosen-Zvi, M.},
+  title     = {Hidden Topic Markov Models},
+  booktitle = {11th International Conference on Artificial Intelligence and Statistics},
+  year      = {2007},
+  volume    = {2},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {163-170},
+  owner     = {Vincent},
+  timestamp = {2022.07.28},
+  url       = {https://proceedings.mlr.press/v2/gruber07a.html},
 }
 
 @InProceedings{Gruhl2004,
@@ -21576,6 +21687,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@Article{Janickyj2022,
+  author        = {Janickyj, M. and Curley, D. and Maccarron, P. and Mccarthy, M. and Yose, J. and Kenna, R.},
+  title         = {The enigmatic {Fraoch} and his eponymous tale - Network analysis of an early {Irish} heroic romance},
+  journal       = {Advances in Complex Systems},
+  year          = {2022},
+  volume        = {in press},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1142/s0219525922400069},
+  owner         = {Vincent},
+  timestamp     = {2022.08.06},
+}
+
 @InProceedings{Jannidis2016,
   author    = {Jannidis, F. and Reger, I. and Krug, M. and Weimer, L. and Macharowsky, L. and Puppe, F.},
   title     = {Comparison of Methods for the Identification of Main Characters in German Novels},
@@ -21716,6 +21839,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.08},
   url       = {https://www.upress.umn.edu/book-division/books/toward-an-aesthetic-of-reception},
+}
+
+@InProceedings{Jayakumar2022,
+  author    = {Jayakumar, A. and Rao, V. and Rohit Kumar, A. S. and Banerjee, P. and Ravish, R.},
+  title     = {Analyzing the development of complex social systems of characters in a work of literary fiction},
+  booktitle = {3rd International Conference for Emerging Technology},
+  year      = {2022},
+  pages     = {1-7},
+  doi       = {10.1109/incet54531.2022.9824015},
+  owner     = {Vincent},
+  timestamp = {2022.07.19},
 }
 
 @InProceedings{Jayannavar2015,
@@ -23166,6 +23300,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.30},
 }
 
+@Article{Kent_1910,
+  author    = {Kent, G. H. and Rosanoff, A. J.},
+  title     = {A Study of Association in Insanity},
+  journal   = {American Journal of Psychiatry},
+  year      = {1910},
+  volume    = {67},
+  number    = {1},
+  pages     = {37-96},
+  doi       = {10.1176/ajp.67.1.37},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @Electronic{Ker2018,
   author       = {Ker, B. and Xian, C. W. and Chong, D.},
   month        = {04},
@@ -23518,6 +23665,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.researchgate.net/publication/312153622_Application_of_Random_Forests_to_Corporate_Credit_Rating_Prediction},
 }
 
+@Book{Kim2016a,
+  title     = {Understanding Narrative Inquiry: The Crafting and Analysis of Stories as Research},
+  publisher = {SAGE Publications},
+  year      = {2016},
+  author    = {Kim, J.-H.},
+  doi       = {10.4135/9781071802861},
+  owner     = {Vincent},
+  timestamp = {2022.07.28},
+}
+
 @InProceedings{Kim2017,
   author    = {Kim, K.-M. and Heo, M.-O. and Choi, S.-H. and Zhang, B.-T.},
   title     = {DeepStory: video story QA by deep embedded memory networks},
@@ -23855,6 +24012,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.02},
   url       = {https://epub.uni-regensburg.de/50828/},
+}
+
+@Article{Kleinfeld2002a,
+  author    = {Kleinfeld, J. S.},
+  title     = {The small world problem},
+  journal   = {Society},
+  year      = {2002},
+  volume    = {39},
+  number    = {2},
+  pages     = {61-66},
+  doi       = {10.1007/bf02717530},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @Article{Klemm2002,
@@ -25481,6 +25651,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.03},
   url       = {https://m.armand-colin.com/la-science-fiction-9782200269210},
+}
+
+@Article{Langlois1990,
+  author    = {Langlois, J. H. and Roggman, L. A.},
+  title     = {Attractive Faces Are Only Average},
+  journal   = {Psychological Science},
+  year      = {1990},
+  volume    = {1},
+  number    = {2},
+  pages     = {115-121},
+  doi       = {10.1111/j.1467-9280.1990.tb00079.x},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @Article{Langmead2016,
@@ -27867,6 +28050,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/9781118783764.wbieme0092},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@Article{Liu2018,
+  author    = {Liu, M. and Wu, Y. and Jiao, D. and Wu, M. S. and Zhu, T.},
+  title     = {Literary intelligence analysis of novel protagonists' personality traits and development},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2018},
+  volume    = {34},
+  number    = {1},
+  pages     = {221-229},
+  month     = {jul},
+  doi       = {10.1093/llc/fqy020},
+  owner     = {Vincent},
+  timestamp = {2022.07.28},
 }
 
 @Article{Liu2019,
@@ -30540,6 +30737,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.07.08},
 }
 
+@Article{McNamara1996,
+  author    = {McNamara, P.},
+  title     = {Bergson's theory of dreaming.},
+  journal   = {Dreaming},
+  year      = {1996},
+  volume    = {6},
+  number    = {3},
+  pages     = {173-186},
+  doi       = {10.1037/h0094453},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @Article{McNamara2005,
   author    = {McNamara, P. and McLaren, D. and Smith, D. and Brown, A. and Stickgold, R.},
   title     = {A ``Jekyll and Hyde'' Within: Aggressive Versus Friendly Interactions in REM and Non-REM Dreams},
@@ -32815,6 +33025,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.30},
 }
 
+@Article{Naldi2022,
+  author        = {Naldi, M. and Dalla Torre, P.},
+  title         = {Uncovering the Narrative Structure of ``Breaking Bad'' Through a Multi-Dimensional Quantitative Analysis},
+  journal       = {Series - International Journal of TV Serial Narratives},
+  year          = {2022},
+  volume        = {8},
+  number        = {1},
+  pages         = {17-32},
+  __markedentry = {[Vincent:]},
+  doi           = {10.6092/ISSN.2421-454X/14503},
+  owner         = {Vincent},
+  timestamp     = {2022.08.06},
+}
+
 @InProceedings{Nalisnick2013,
   author    = {Nalisnick, E. T. and Baird, H. S.},
   title     = {Character-to-Character Sentiment Analysis in {Shakespeare}'s Plays},
@@ -33695,6 +33919,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.20},
 }
 
+@Article{Nielsen_1993,
+  author    = {Nielsen, T. A.},
+  title     = {Changes in the kinesthetic content of dreams following somatosensory stimulation of leg muscles during {REM} sleep},
+  journal   = {Dreaming},
+  year      = {1993},
+  volume    = {3},
+  number    = {2},
+  pages     = {99-113},
+  doi       = {10.1037/h0094374},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @InProceedings{Nielsen2011,
   author    = {Nielsen, F. A.},
   title     = {A new ANEW: Evaluation of a word list for sentiment analysis in microblogs},
@@ -34054,6 +34291,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://www.semanticscholar.org/paper/Diegetic-and-Mimetic-Narrativity%3A-Some-further-a-of-N%C3%BCnning-Sommer/1a6bc249ae362f6ceaf7933aba5c510cc5fd7154},
+}
+
+@TechReport{Nusbaum1984,
+  author      = {Nusbaum, H. C. and Pisoni, D. B. and Davis, C. K.},
+  title       = {Sizing up the Hoosier mental lexicon: Measuring the familiarity of 20,000 words},
+  institution = {Speech Research Laboratory, Department of Psychology, Indiana University},
+  year        = {1984},
+  type        = {Technical Report},
+  number      = {Research on Speech Perception Progress Rep. No. 10},
+  owner       = {Vincent},
+  timestamp   = {2022.08.11},
+  url         = {https://www.semanticscholar.org/paper/Sizing-up-the-Hoosier-Mental-Lexicon%3A-Measuring-the-Nusbaum/d0dfc5be92a49e9de8d819d0a6e1aa8484d9e250},
 }
 
 @Book{Nutt1900,
@@ -37454,6 +37703,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://escholarship.org/uc/item/93z910gg},
 }
 
+@Article{Rechtschaffen1965,
+  author    = {Rechtschaffen, A. and Foulkes, D.},
+  title     = {Effect of Visual Stimuli on Dream Content},
+  journal   = {Perceptual and Motor Skills},
+  year      = {1965},
+  volume    = {20},
+  number    = {3suppl},
+  pages     = {1149-1160},
+  doi       = {10.2466/pms.1965.20.3c.1149},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @Article{Reda2011,
   author    = {Reda, K. and Tantipathananandh, C. and Johnson, A. and Leigh, J. and Berger-Wolf, T.},
   title     = {Visualizing the Evolution of Community Structures in Dynamic Social Networks},
@@ -39234,6 +39496,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/papers/L/L10/L10-1297/},
 }
 
+@TechReport{Russell1954,
+  author      = {Russell, W. A. and Jenkins, J. J.},
+  title       = {The complete Minnesota norms for responses to 100 words from the Kent-Rosanoff Word Association Test},
+  institution = {University of Minnesota},
+  year        = {1954},
+  type        = {Technical Report},
+  number      = {11},
+  owner       = {Vincent},
+  timestamp   = {2022.08.11},
+  url         = {https://www.worldcat.org/title/complete-minnesota-norms-for-responses-to-100-words-from-the-kent-rosanoff-word-association-test/oclc/6801978},
+}
+
 @Book{Russell2002,
   title     = {Romantic Sociability : Social Networks and Literary Culture in Britain, 1770-1840},
   publisher = {Cambridge University Press},
@@ -39852,6 +40126,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/TMM.2012.2188784},
   owner     = {Vincent},
   timestamp = {2018.05.24},
+}
+
+@InProceedings{Sang2022,
+  author    = {Sang, Y. and Mou, X. and Yu, M. and Wang, D. and Li, J. and Stanton, J.},
+  title     = {Machine Narrative Comprehension in Fictional Characters Personality Prediction Task},
+  booktitle = {NAACL Student Research Workshop},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.08.06},
+  url       = {https://naacl2022-srw.github.io/non_arch_papers/72.pdf},
 }
 
 @Article{Sanjek1974,
@@ -42538,6 +42822,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@Article{Solomonoff1951,
+  author    = {Solomonoff, R. and Rapoport, A.},
+  title     = {Connectivity of random nets},
+  journal   = {Bulletin of Mathematical Biophysics},
+  year      = {1951},
+  volume    = {13},
+  number    = {2},
+  pages     = {107-117},
+  doi       = {10.1007/bf02478357},
+  groups    = {_Misc Wo/C},
+  owner     = {Vincent},
+  timestamp = {2022.02.19},
+}
+
 @Article{Somandepalli2018,
   author    = {Somandepalli, K. and Kumar, N. and Guha, T. and Narayanan, S. S.},
   title     = {Unsupervised Discovery of Character Dictionaries in Animation Movies},
@@ -43180,6 +43478,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1162/089892999563319},
   owner     = {Vincent},
   timestamp = {2022.06.21},
+}
+
+@Article{Stickgold2001,
+  author    = {Stickgold, R. and Hobson, J. A. and Fosse, R. and Fosse, M.},
+  title     = {Sleep, Learning, and Dreams: Off-line Memory Reprocessing},
+  journal   = {Science},
+  year      = {2001},
+  volume    = {294},
+  number    = {5544},
+  pages     = {1052-1057},
+  doi       = {10.1126/science.1063530},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @Article{Stiller2003,
@@ -45595,6 +45906,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=UT9dAAAAIAAJ},
 }
 
+@Article{Tulving1985,
+  author    = {Tulving, E.},
+  title     = {Memory and consciousness.},
+  journal   = {Canadian Psychology / Psychologie canadienne},
+  year      = {1985},
+  volume    = {26},
+  number    = {1},
+  pages     = {1-12},
+  doi       = {10.1037/h0080017},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @InProceedings{Tunkelang1998,
   author    = {Tunkelang, D.},
   title     = {{JIGGLE}: Java Interactive Graph Layout Environment},
@@ -46522,6 +46846,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1592665.1592675},
   owner     = {Vincent},
   timestamp = {2017.06.04},
+}
+
+@TechReport{Vitevitch2005,
+  author      = {Vitevitch, M. S.},
+  title       = {Phonological neighbors in a small world: What can graph theory tell us about word learning?},
+  institution = {Department of Psychology, University of Kansas},
+  year        = {2005},
+  type        = {Unpublished Report},
+  owner       = {Vincent},
+  timestamp   = {2022.08.11},
+  url         = {https://cns.iu.edu/docs/netscitalks/vitevitch.pdf},
 }
 
 @Article{Vitevitch2008,
